# semiflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: README.md
docs/source/: api.rst  conf.py  index.rst
playground/: test.py  test_basic.py  test_optim.py
playground/pytroch/: comp_graph_example.py
semiflow/: functions.py  gradFunction.py  node.py
semiflow/nn/: bert.py  dropout.py  embedding.py  linear.py  module.py  parameter.py
semiflow/nn/activation/: relu.py  sigmoid.py  softmax.py
semiflow/nn/optimizers/: adam.py
semiflow/nn/transformer/: README.md  encoder_block.py  feed_forward_block.py  layer_normalization.py  multi_head_attention_block.py  positional_encoding.py  residual_connection.py
